--- a/index.html
+++ b/index.html
@@ -7,6 +7,162 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
+	<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 text-center col-xs-12">
+					<h1>cualquier cosa</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-xs-6">
+					<img src="assets/img/vertical/10.jpg" class="img-responsive">
+				</div>
+				<div class="col-md-6 col-xs-6">
+					<img src="assets/img/vertical/6.jpg" class="img-responsive">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3 col-xs-3">
+					<h1>Texto</h1>
+				</div>
+				<div class="col-md-3 col-xs-3">
+					<h1>texto2</h1>
+				</div>
+				<div class="col-md-3 col-xs-3">
+					<h1>textio3</h1>
+				</div>
+				<div class="col-md-3 col-xs-3">
+					<h1>teclkasd</h1>
+				</div>
+			</div>
+
+			<div class="row">
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			  <!-- Indicators -->
+			  <ol class="carousel-indicators">
+			    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+			  </ol>
+
+			  <!-- Wrapper for slides -->
+			  <div class="carousel-inner" role="listbox">
+			    <div class="item active">
+			      <img src="assets/img/horizontal/1.jpg" alt="uno">
+			      <div class="carousel-caption">
+			        Michael Jackson uno
+			      </div>
+			    </div>
+			    <div class="item">
+			      <img src="assets/img/horizontal/14.jpg" alt="dos">
+			      <div class="carousel-caption">
+			        Michael Jackson dos
+			      </div>
+			    </div>
+			    <div class="item">
+			      <img src="assets/img/horizontal/15.jpg" alt="3">
+			      <div class="carousel-caption">
+			        Michael Jackson 3
+			      </div>
+			    </div>
+			    <div class="item">
+			      <img src="assets/img/horizontal/17.jpg" alt="4">
+			      <div class="carousel-caption">
+			        Michael Jackson 4
+			      </div>
+			    </div>
+			    <div class="item">
+			      <img src="assets/img/horizontal/18.jpg" alt="5">
+			      <div class="carousel-caption">
+			        Michael Jackson 5
+			      </div>
+			    </div>
+			    <div class="item">
+			      <img src="assets/img/horizontal/20.jpg" alt="6">
+			      <div class="carousel-caption">
+			        Michael Jackson 6
+			      </div>
+			    </div>
+			    
+			  </div>
+
+			  <!-- Controls -->
+			  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+			    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+			    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>
+						</div>
+		</div>
+	</section>
+
+	<script
+  	src="https://code.jquery.com/jquery-3.2.1.min.js"
+  	integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  	crossorigin="anonymous"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/main.js"></script>
